--- a/app/src/main/res/layout/activity_space.xml
+++ b/app/src/main/res/layout/activity_space.xml
@@ -5,18 +5,18 @@
     android:id="@+id/activity_space"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="mhealt.kku.funlhek.activity.SpaceActivity">
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher"
-        android:id="@+id/imageButton"
-        android:layout_marginTop="184dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+    <!--<VideoView
+        android:id="@+id/videoView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />-->
+
+    <ImageView
+        android:id="@+id/imageview"
+        android:scaleType="centerCrop"
+        android:src="@drawable/openninggif"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </RelativeLayout>
