delect openning gif

--- a/app/src/main/res/layout/activity_space.xml
+++ b/app/src/main/res/layout/activity_space.xml
@@ -12,11 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />-->
 
-    <ImageView
+    <!--<ImageView
         android:id="@+id/imageview"
         android:scaleType="centerCrop"
         android:src="@drawable/openninggif"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" />-->
 
 </RelativeLayout>
