--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,53 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:id="@+id/activity_main"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context="mhealt.kku.funlhek.activity.MapsActivity">
-
-<!--Content-->
-
-    <LinearLayout
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="24dp">
+    tools:context="mhealt.kku.funlhek.activity.MapsActivity">
 
-        <AutoCompleteTextView
+    <!--Irrelevant stuff -->
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/appbarlayout"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbarlayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#00ffffff">
+
+            <FrameLayout
+                android:id="@+id/toolbar_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <android.support.v7.widget.Toolbar
+                        android:id="@+id/toolbar"
+                        android:background="@color/colorPrimary"
+                        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                        android:layout_width="match_parent"
+                        android:layout_height="?attr/actionBarSize"
+                        />
+
+                <com.miguelcatalan.materialsearchview.MaterialSearchView
+                    android:id="@+id/search_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <!-- <AutoCompleteTextView
+                android:lines="1"
+                android:textSize="21sp"
+                android:layout_alignParentTop="true"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/at_text"
+                android:completionThreshold="4"
+                android:layout_marginRight="16dp"
+                android:dropDownHeight="100px" />-->
+            </FrameLayout>
+
+
+        </android.support.design.widget.AppBarLayout>
+
+        // Refer to Fragment
+        <fragment
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:map="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="mhealt.kku.funlhek.activity.MapsActivity" />
+
+    <!--Content-->
+    <!--<RelativeLayout
+        android:background="@color/colorWhite"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <AutoCompleteTextView
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginTop="12dp"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
             android:id="@+id/at_text"
             android:completionThreshold="4"
             android:dropDownHeight="100px" />
 
 
-        // Refer to Fragment
+    </RelativeLayout>-->
 
-        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:map="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="mhealt.kku.funlhek.activity.MapsActivity" />
-</LinearLayout>
+    <!--Menu-->
+    <LinearLayout
+        android:layout_gravity="start"
+        android:background="#ffffff"
+        android:orientation="vertical"
+        android:layout_width="320dp"
+        android:layout_height="match_parent">
 
-<!--Menu-->
-<LinearLayout
-    android:layout_gravity="start"
-    android:background="#ffffff"
-    android:orientation="vertical"
-    android:layout_width="240dp"
-    android:layout_height="match_parent">
+        <Button
+            android:contentDescription="sample button"
+            android:text="ok"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <Button
-        android:contentDescription="sample button"
-        android:text="ok"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    </LinearLayout>
 
-</LinearLayout>
 </android.support.v4.widget.DrawerLayout>
